--- a/scss/style.scss
+++ b/scss/style.scss
@@ -34,8 +34,8 @@ body {
 
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
-    min-height: 100%;
+    justify-content: flex-start;
+    min-height: 100vh;
 }
 
 h2 {
@@ -147,6 +147,7 @@ h2 {
 
 .Footer {
     background-color: black;
+    margin-top: auto;
 }
 
 .FooterContent {
